Add Header Component

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -776,7 +776,7 @@ border: 1px solid #fe4b7b;
     font-weight: 600;
 }
 .mean-container .mean-nav ul li li a:first-child,.menu .sub-menu li:last-child {
-  /*  border: none;*/
+    border: none;
 }
 .menu .sub-menu li, .menu .children li {
     border-bottom: 1px solid rgba(217, 217, 217, 0.5);
@@ -1026,7 +1026,7 @@ box-shadow: 0 0 0 0;
     font-weight: 600;
 }
 .mean-container .mean-nav ul li li a:first-child,.menu .sub-menu li:last-child {
-    /*border: none;*/
+    border: none;
     }
 .menu .sub-menu li, .menu .children li {
     border-bottom: 1px solid rgba(217, 217, 217, 0.5);
@@ -1184,7 +1184,7 @@ margin-bottom: 50px;
     width:100% !important;
 }
     .newslater-area img{
-        margin-bottom: 50px;'
+        margin-bottom: 50px;
     }
     .adim-box{
         margin-bottom: 30px;
@@ -1344,9 +1344,7 @@ border: 1px solid #fe4b7b;
         width: 100%;
     }
     
-    .counter-area {
-   
-}
+    
 
     .single-counter {
    margin-bottom: 30px;
@@ -2060,4 +2058,5 @@ background: #002e5b;
     .button-group button {
     margin: 0 2px;
 
+}
 }
