--- a/public/css/style.css
+++ b/public/css/style.css
@@ -698,6 +698,7 @@ text-transform: uppercase;
 color: #fff;
 padding: 18px 35px;
     position: relative;
+    border-radius: 30px;
 }
 .second-header-btn .btn:hover {
 	color: #fff;
@@ -965,7 +966,7 @@ position: relative;
 	padding: 0;
 	margin-bottom: 0;
 	list-style: none;
-	background-color: unset;
+	background-color: transparent !important;
 	border-radius: 0;
 }
 .breadcrumb li {display: inline-block;}
