--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 
 /* 1. Theme default css */
  body {
-       font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 	font-size: 15px;
 	font-weight: normal;
 	color: #777;
@@ -2947,7 +2947,7 @@ border-radius: 50%;
 }
 .wp-list ul li {
 	display: flex;
-	align-items: start;
+	align-items: flex-start;
 	overflow: hidden;
 	margin-bottom: 45px;
 }
